--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,37 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        form {
-            width: 300px;
-            margin: 0 auto;
-        }
-        input {
-            width: 100%;
-            padding: 8px;
-            margin: 5px 0;
-        }
-        button {
-            padding: 8px;
-            cursor: pointer;
-        }
-    </style>
 </head>
 <body>
-    <h2>Signup</h2>
+    <h2>Sign Up</h2>
     <form id="signupForm">
-        <input type="text" id="name" placeholder="Enter Name" required>
-        <input type="email" id="email" placeholder="Enter Email" required>
-        <input type="password" id="password" placeholder="Enter Password" required>
+        <input type="text" id="name" placeholder="Enter Name" required><br><br>
+        <input type="email" id="email" placeholder="Enter Email" required><br><br>
+        <input type="password" id="password" placeholder="Enter Password" required><br><br>
         <button type="submit">Sign Up</button>
     </form>
 
-    <p>Already have an account? <a href="login.html">Login</a></p>
+    <script>
+        document.getElementById("signupForm").addEventListener("submit", async function (event) {
+            event.preventDefault(); // Prevent page reload
 
-    <script src="signup.js"></script>
+            const name = document.getElementById("name").value;
+            const email = document.getElementById("email").value;
+            const password = document.getElementById("password").value;
+
+            const response = await fetch("https://real-v0yk.onrender.com/auth/signup", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ name, email, password })
+            });
+
+            const data = await response.json();
+            alert(data.message);
+
+            if (response.ok) {
+                window.location.href = "login.html"; // Redirect to login page
+            }
+        });
+    </script>
 </body>
 </html>
