--- a/frontend/Login.html
+++ b/frontend/Login.html
@@ -4,36 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        form {
-            width: 300px;
-            margin: 0 auto;
-        }
-        input {
-            width: 100%;
-            padding: 8px;
-            margin: 5px 0;
-        }
-        button {
-            padding: 8px;
-            cursor: pointer;
-        }
-    </style>
 </head>
 <body>
     <h2>Login</h2>
     <form id="loginForm">
-        <input type="email" id="email" placeholder="Enter Email" required>
-        <input type="password" id="password" placeholder="Enter Password" required>
+        <input type="email" id="email" placeholder="Enter Email" required><br><br>
+        <input type="password" id="password" placeholder="Enter Password" required><br><br>
         <button type="submit">Login</button>
     </form>
 
-    <p>Don't have an account? <a href="index.html">Sign Up</a></p>
+    <script>
+        document.getElementById("loginForm").addEventListener("submit", async function (event) {
+            event.preventDefault(); // Prevent page reload
 
-    <script src="login.js"></script>
+            const email = document.getElementById("email").value;
+            const password = document.getElementById("password").value;
+
+            const response = await fetch("https://real-v0yk.onrender.com/auth/login", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ email, password })
+            });
+
+            const data = await response.json();
+            alert(data.message);
+
+            if (response.ok) {
+                localStorage.setItem("token", data.token); // Store JWT token
+                window.location.href = "dashboard.html"; // Redirect to dashboard
+            }
+        });
+    </script>
 </body>
 </html>
