--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
             alert(data.message);
 
             if (response.ok) {
-                window.location.href = "./login.html"; // Redirect to login page
+                window.location.href = "login.html"; // Redirect to login page
             }
         });
     </script>
