--- a/frontend/Login.html
+++ b/frontend/Login.html
@@ -20,6 +20,7 @@
             const email = document.getElementById("email").value;
             const password = document.getElementById("password").value;
 
+            // Make the API call to the backend
             const response = await fetch("https://real-v0yk.onrender.com/auth/login", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
@@ -27,11 +28,13 @@
             });
 
             const data = await response.json();
-            alert(data.message);
+            alert(data.message); // Show response message
 
             if (response.ok) {
                 localStorage.setItem("token", data.token); // Store JWT token
                 window.location.href = "dashboard.html"; // Redirect to dashboard
+            } else {
+                alert(data.message || "Login failed, please try again.");
             }
         });
     </script>
